# SelfSDK

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: build.cmake  config.h.in  directory.cmake  macro.cmake  sdk-config.h.in  sdk_config.h.in
components/: CMakeLists.txt  sdk-def.h
components/function/: CMakeLists.txt
components/geometry/: CMakeLists.txt
components/geometry/include/: config.h  geometry_define.hpp  geometry_utils.hpp  line.hpp  point.h  point.hpp  polygon.hpp
components/geometry/src/: line.cpp  point.cpp  polygon.cpp
components/utility/: CMakeLists.txt
components/utility/crc/include/: crc-def.h  crc16.h  crc8.h
components/utility/crc/src/: crc16.c  crc8.c
shell/: install-cmake.sh
test/: CMakeLists.txt  README.md  check.cpp
test/function/: CMakeLists.txt
test/geometry/: CMakeLists.txt  main.cpp
test/geometry-test/: CMakeLists.txt  test.cpp
test/utility/: CMakeLists.txt  main.cpp
